[package]
name = "neurarbor"
version = "0.1.6-alpha.0"
authors = ["Chris Barnes <barnesc@janelia.hhmi.org>"]
edition = "2018"
license = "MIT"
description = "Utilities for manipulating tree graphs, for the analysis of neuronal arbors."
readme = "README.md"
documentation = "https://docs.rs/neurarbor"
homepage = "https://github.com/clbarnes/neurarbor"
repository = "https://github.com/clbarnes/neurarbor"

[badges]

travis-ci = { repository = "clbarnes/neurarbor", branch = "master" }

[dependencies]

slab_tree = "0.3.1"

[dev-dependencies]

cargo-readme = "3.2.0"

[package.metadata.release]

disable-publish = true
